# ethernity

./: .gitignore  Cargo.toml  Dockerfile  ENTREGA_FINAL.md  README.md  RELATORIO_CORRECOES.md  ai_fixer.py  todo.md
.github/workflows/: pr-review.yml
crates/ethernity-core/: Cargo.toml  README.md
crates/ethernity-core/src/: error.rs  lib.rs  traits.rs  types.rs  utils.rs
crates/ethernity-deeptrace/: Cargo.toml  README.md
crates/ethernity-deeptrace/examples/: README.md  event_detector.rs  pattern_detector.rs
crates/ethernity-deeptrace/src/: analyzer.rs  config.rs  deeptrace.rs  detectors.rs  lib.rs  memory.rs  patterns.rs  trace.rs  types.rs  utils.rs
crates/ethernity-deeptrace/src/analyzer/: call_tree.rs  contracts.rs  execution.rs  mod.rs  stats.rs  token.rs
crates/ethernity-deeptrace/src/detectors/: frontrunning.rs  mod.rs  price_manipulation.rs  reentrancy.rs  sandwich_attack.rs  suspicious_liquidation.rs
crates/ethernity-deeptrace/src/memory/: buffer_pool.rs  cache.rs  manager.rs  mod.rs  monitor.rs
crates/ethernity-deeptrace/src/patterns/: dex.rs  erc20.rs  erc721.rs  flash_loan.rs  governance.rs  lending.rs  mev.rs  mod.rs  rug_pull.rs
crates/ethernity-deeptrace/src/trace/: detector.rs  mod.rs  tree.rs  types.rs
crates/ethernity-deeptrace/tests/: cache_eviction.rs  detectors_test.rs  memory_tests.rs  patterns_suite.rs  patterns_test.rs  trace_test.rs
crates/ethernity-detector-mev/: Cargo.toml  README.md
crates/ethernity-detector-mev/examples/: README.md  example.rs  mempool_monitor.rs  mempool_stream.rs
crates/ethernity-detector-mev/src/: attack_detector.rs  events.rs  lib.rs  mempool_supervisor.rs  rpc_state_provider.rs  state_cache_manager.rs  state_impact_evaluator.rs  state_snapshot_repository.rs  traits.rs  tx_aggregator.rs  tx_nature_tagger.rs
crates/ethernity-detector-mev/tests/: aggregator_basic.rs  aggregator_extended.rs  attack_detector_additional.rs  attack_detector_basic.rs  attack_detector_extended.rs  complex_mev_scenarios.rs  concurrency_aggregator.rs  extreme_liquidity_math.rs  impact_basic.rs  impact_state.rs  integration_full_pipeline.rs  mempool_supervisor.rs  numerical_extremes.rs  pancakeswap_exactinput.rs  rpc_state_provider.rs  state_cache_basic.rs  state_recovery_chaos.rs  state_snapshot_basic.rs  supervisor_mode_transitions.rs  tagger_advanced.rs  tagger_basic.rs  tagger_cache_concurrency.rs  traits_mock.rs
crates/ethernity-finder/: Cargo.toml  README.md
crates/ethernity-finder/examples/: README.md  find_nodes.rs
crates/ethernity-finder/src/: lib.rs
crates/ethernity-fingerprint/: Cargo.toml  README.md
crates/ethernity-fingerprint/examples/: fingerprint_contract.rs
crates/ethernity-fingerprint/src/: lib.rs
crates/ethernity-fingerprint/src/cfg/: mod.rs
crates/ethernity-fingerprint/src/dispatcher/: mod.rs
crates/ethernity-fingerprint/src/fbs/: mod.rs
crates/ethernity-fingerprint/src/fingerprint/: mod.rs
crates/ethernity-fingerprint/src/ir/: mod.rs
crates/ethernity-fingerprint/src/parser/: mod.rs
crates/ethernity-fingerprint/src/utils/: mod.rs
crates/ethernity-fingerprint/tests/: fingerprint_tests.rs
crates/ethernity-logs/: Cargo.toml  README.md
crates/ethernity-logs/src/: lib.rs
crates/ethernity-rpc/: Cargo.toml  README.md
crates/ethernity-rpc/src/: lib.rs
crates/ethernity-sdk/: Cargo.toml  README.md
crates/ethernity-sdk/src/: lib.rs
crates/ethernity-simulate/: Cargo.toml  README.md
crates/ethernity-simulate/examples/: README.md  session_demo.rs  simulate_tx.rs  simulate_tx_trace.rs
crates/ethernity-simulate/src/: errors.rs  lib.rs  logger.rs  traits.rs
crates/ethernity-simulate/src/providers/: anvil.rs  mod.rs
crates/ethernity-simulate/src/sessions/: mod.rs  session.rs
crates/sandwich-victim/: Cargo.toml  README.md
crates/sandwich-victim/examples/: README.md  analyze_tx.rs  mempool_watch.rs
crates/sandwich-victim/src/: lib.rs  log_semantics.rs  simulation.rs  tx_logs.rs  types.rs  utils.rs
crates/sandwich-victim/src/analysis/: mod.rs
crates/sandwich-victim/src/client/: rpc.rs
crates/sandwich-victim/src/core/: analyzer.rs  metrics.rs  mod.rs
crates/sandwich-victim/src/detectors/: mod.rs  multicall_bytes.rs  pancakeswap_v3.rs  swap_v2_exact_in.rs  uniswap_v2.rs
crates/sandwich-victim/src/detectors/clusters/: mod.rs
crates/sandwich-victim/src/detectors/clusters/oneinch_aggregation_router_v6/: mod.rs
crates/sandwich-victim/src/detectors/clusters/oneinch_generic_router/: mod.rs
crates/sandwich-victim/src/detectors/clusters/smart_router/: mod.rs
crates/sandwich-victim/src/detectors/clusters/smart_router/custom/: mod.rs  uniswap_v3.rs
crates/sandwich-victim/src/detectors/clusters/uniswap_universal_router/: mod.rs
crates/sandwich-victim/src/detectors/clusters/uniswap_v2/: exact_in.rs  mod.rs
crates/sandwich-victim/src/detectors/clusters/uniswap_v3/: mod.rs
crates/sandwich-victim/src/detectors/clusters/uniswap_v4/: mod.rs
crates/sandwich-victim/src/dex/: decoder.rs  mod.rs  query.rs  router.rs
crates/sandwich-victim/src/filters/: mod.rs
crates/sandwich-victim/src/simulation/: error.rs  executor.rs  mod.rs  session.rs
crates/sandwich-victim/tests/: decoder_test.rs  log_semantics_test.rs  metrics_test.rs
docs/: software_principles.md  technical_documentation.md
examples/nodejs-kafka/: .env  README.md  consumer.js  event-processor.js  index.js  package-lock.json  package.json  subscription-manager.js  test-consumer.js
tests/: integration_test.py  performance_report.json  performance_test.py  rpc_integration_test.py
