[workspace]
resolver = "2"
members = [
    "crates/ethernity-core",
    "crates/ethernity-deeptrace",
    "crates/ethernity-rpc",
    "crates/ethernity-finder",
    "crates/ethernity-fingerprint",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ethernity Team"]
description = "Workspace para interação e análise de transações blockchain no ambiente EVM"
repository = "https://github.com/ethernity/ethernity"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Dependências comuns
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
thiserror = "1.0.40"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.71"

# Ethereum/EVM
ethers = { version = "2.0", features = ["ws", "rustls"] }
web3 = "0.19.0"
ethereum-types = "0.14.1"


# Utilitários
bytes = "1.4.0"
chrono = { version = "0.4.24", features = ["serde"] }
futures = "0.3.28"
lru = "0.10.0"
dashmap = "5.4.0"
parking_lot = "0.12.1"
