[package]
name = "ethernity-detector-mev"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Detecção passiva de oportunidades MEV em transações Ethereum"
license.workspace = true

[dependencies]
ethernity-core = { path = "../ethernity-core" }
lru = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
ethers = { workspace = true }
ethereum-types = { workspace = true }
tiny-keccak = { version = "2.0", features = ["keccak"] }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
redb = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hex = "0.4"
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
loom = "0.7"
futures = { workspace = true }
rlimit = "0.10"
web3 = { workspace = true }
ethernity-rpc = { path = "../ethernity-rpc" }
anyhow = { workspace = true }
