[package]
name = "ethernity-fingerprint"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Geração de assinaturas semânticas de contratos EVM"
license.workspace = true

[dependencies]
# Crates internas
ethernity-core = { path = "../ethernity-core" }

# Hashing
tiny-keccak = { version = "2", features = ["keccak"] }

# Ethereum types
ethereum-types = { workspace = true }
hex = "0.4"

