[package]
name = "ethernity-logs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = ["tokio"]

[dev-dependencies]
wiremock = "0.5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
