[package]
name = "ethernity-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SDKs para consumidores de eventos Ethernity"
license.workspace = true

[dependencies]
# Crates internas
ethernity-core = { path = "../ethernity-core" }

# Kafka
rdkafka = { workspace = true }
schema_registry_converter = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialização
serde = { workspace = true }
serde_json = { workspace = true }
avro-rs = "0.13.0"

# HTTP/WebSocket
reqwest = { version = "0.11.18", features = ["json"] }
tokio-tungstenite = "0.19.0"

# Utilitários
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.4"
