[package]
name = "sandwich-victim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ethereum-types = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true, features = ["full"] }

# Dependência opcional para simulação local
anvil = { version = "0.3", optional = true }

[features]
default = []
anvil = ["dep:anvil"]
