[package]
name = "sandwich-victim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
ethereum-types = { workspace = true }
ethers = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }
rlp = "0.5"
parking_lot = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
ethernity-core = { path = "../ethernity-core" }
ethernity-rpc = { path = "../ethernity-rpc" }
async-trait = { workspace = true }
once_cell = "1"
chrono = { workspace = true }

# Dependência para simulação local
anvil = "0.3"
[dev-dependencies]

hex = "0.4"


[features]
default = []

